# everythingsreduced

./: CITATION.cff  LICENSE  README.md
results/: a100-results.csv  clx-1S-results.csv  clx-results.csv  complex_min.csv  complex_sum.csv  complex_sum_soa.csv  describe.csv  dot.csv  field_summary.csv  gen9-results.csv  mi100-results.csv  peaks.csv  reorganize.py  results.csv  results.ipynb  rome-results-aocc.csv  rome-results-cce.csv  run_a100.out  run_clx.out  run_clx_1S.out  run_gen9.out  run_mi100.out  run_rome_aocc.out  run_rome_cce.out
src/: .clang-format  .gitignore  CMakeLists.txt  complex_min.hpp  complex_sum.hpp  complex_sum_soa.hpp  config.hpp.in  describe.hpp  dot.hpp  dot_rank1.hpp  dpcpp_cuda_compile.sh  dpcpp_cuda_run.sh  dpcpp_cuda_run1.out  dpcpp_cuda_run2.out  dpcpp_cuda_run3.out  dpcpp_icelake_compile.sh  dpcpp_icelake_run.sh  dpcpp_icelake_run1.out  dpcpp_icelake_run2.out  dpcpp_icelake_run3.out  dpcpp_onedpl_cuda_compile.sh  field_summary.hpp  format.sh  gcc_icelake_run.sh  gcc_icelake_run1.out  gcc_icelake_run2.out  gcc_icelake_run3.out  histogram.hpp  inf_norm.hpp  main.cpp  matvec_group.hpp  matvec_inner_product.hpp  nvc_stdpar_a100_run1.out  nvc_stdpar_a100_run2.out  nvc_stdpar_a100_run3.out  onedpl_gen9_run1.out  onedpl_gen9_run2.out  onedpl_gen9_run3.out  onedpl_icelake_compile.sh  onedpl_icelake_run.sh  (+9 more)
src/kokkos/: complex_min.cpp  complex_sum.cpp  complex_sum_soa.cpp  describe.cpp  dot.cpp  field_summary.cpp
src/omp/: complex_min.cpp  complex_sum.cpp  complex_sum_soa.cpp  describe.cpp  dot.cpp  field_summary.cpp
src/omp-target/: complex_min.cpp  complex_sum.cpp  complex_sum_soa.cpp  describe.cpp  dot.cpp  field_summary.cpp  util.hpp
src/oneDPL/: complex_min.cpp  complex_sum.cpp  complex_sum_soa.cpp  describe.cpp  dot.cpp  field_summary.cpp
src/raja/: complex_min.cpp  complex_sum.cpp  complex_sum_soa.cpp  describe.cpp  dot.cpp  field_summary.cpp
src/stdpar/: dot.cpp
src/sycl/: common.hpp  complex_min.cpp  complex_sum.cpp  complex_sum_soa.cpp  describe.cpp  dot.cpp  dot_rank1.cpp  field_summary.cpp  histogram.cpp  inf_norm.cpp  matvec_group.cpp  matvec_inner_product.cpp
